# sgrbot

./: .ko.yaml  .rumdl.toml  AGENTS.md  Cargo.toml  Containerfile  LICENSE  devenv.nix  go.mod  go.sum
.github/workflows/: ci.yaml  claude-code-review.yaml  container.yaml
cmd/sgrbot/: main.go
docs/: README.md
docs/modules/: music-player.md
internal/bot/: bot.go  bot_test.go  config.go  config_test.go  module.go  registry.go  registry_test.go  responder.go
internal/modules/music_player/: config.go  module.go
internal/modules/music_player/application/: domain_event_handlers.go  event_handlers.go
internal/modules/music_player/domain/: auto_play_service.go  auto_play_service_test.go  errors.go  events.go  loop_mode.go  loop_mode_test.go  now_playing.go  player_service.go  player_service_test.go  player_state.go  player_state_test.go  queue.go  queue_entry.go  queue_test.go  repository.go  search_query.go  search_query_test.go  source.go  track.go  track_list.go  track_list_test.go  track_recommender.go  track_test.go  user.go  user_test.go
internal/modules/music_player/infrastructure/: channel_event_bus.go  discord_user_info.go  event_handlers.go  event_handlers_test.go  lavalink_client.go  memory_repository.go  memory_repository_test.go  notifier.go  track_recommender.go  voice_state.go
internal/modules/music_player/presentation/: autocomplete.go  command_handlers.go  (+4 more)
internal/modules/test/: module.go
src/: error_handler.rs  event_handler.rs  main.rs  state_store.rs
src/commands/: mod.rs  test.rs
src/modules/: error.rs  mod.rs
src/modules/audio_player/: autocompletes.rs  commands.rs  errors.rs  events.rs  logic.rs  mod.rs  models.rs  state.rs
src/modules/test/: commands.rs  events.rs  mod.rs  state.rs
(+125 files in other folders)
