[package]
name = "sgrbot"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.88"
dashmap = "6.1.0"
inventory = "0.3.20"
poise = "0.6.1"
serenity = "0.12.1"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["test"]
test = []
