[package]
name = "sgrbot"
version = "1.0.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.82"
async-trait = "0.1.88"
chrono = "0.4.40"
dashmap = "6.1.0"
futures = "0.3.31"
inventory = "0.3.20"
lavalink-rs = { version = "0.14.1", features = ["serenity", "songbird"] }
poise = "0.6.1"
serde = "1.0.219"
serde_json = "1.0.140"
serenity = "0.12.1"
songbird = { version = "0.5.0", features = ["serenity"] }
symphonia = { version = "0.5.4", features = ["aac", "mp3", "isomp4", "alac"] }
thiserror = "2.0.12"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[features]
default = ["audio-player", "test"]
audio-player = []
test = []
